chore: jvm arguments